--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,8 @@ workflows:
           context:
             - snyk-bot-slack
           channel: team-arch
-          trusted-branch: main
+          trusted-branch: master
           filters:
             branches:
               ignore:
-                - main    
+                - master    
